--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         </activity>
 
         <service android:name=".CTP.MdService" />
+        <service android:name=".CTP.TraderService" />
 
 
     </application>
